# my_first_crew_simple_chat

./: README.md  inputs.json  pyproject.toml
src/my_first_crew_simple_chat/: crew.py  main.py
src/my_first_crew_simple_chat/config/: agents.yaml  tasks.yaml
