[project]
name = "my_first_crew_simple_chat"
version = "0.1.0"
description = "my_first_crew_simple_chat using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,litellm,tools]==1.8.0",
]

[project.scripts]
my_first_crew_simple_chat = "my_first_crew_simple_chat.main:run"
run_crew = "my_first_crew_simple_chat.main:run"
train = "my_first_crew_simple_chat.main:train"
replay = "my_first_crew_simple_chat.main:replay"
test = "my_first_crew_simple_chat.main:test"
run_with_trigger = "my_first_crew_simple_chat.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
